Revision history for {{$dist->name}}

{{$NEXT}}
	Bug fixes:
	* Length calculation was incorrect, this could cause undef frames.
	* ->headers method support in Protocol::SPDY::Stream, needed for
	proper server push support

	Build:
	* Uses cpanfile for dependency tracking

	Documentation:
	* Mention some of the constants available in Protocol::SPDY::Constants

0.999_002 2013-08-06 04:59:45 Europe/London
	No functional changes

	Dependency fixes:
	* Attempt to get MIN_PERL_VERSION into Makefile.PL (the
	Dist::Zilla::Plugin::MinimumPerl module does not appear
	to do this, perhaps because Dist::Zilla::Plugin::MakeMaker
	explicitly deletes that hash entry in favour of putting
	it as a 'use' line in Makefile.PL, unclear yet why this is)
	This version uses a patched Dist::Zilla::Plugin::MakeMaker
	to avoid removing the MIN_PERL_VERSION key.

0.999_001 2013-08-05 06:43:11 Europe/London
	Development version for cpantesters prior to 1.0 release

	Features:
	* Updated for spdy/3 support.
	* Higher-level handling for streams and client/server
	modes, to avoid duplication of logic when implementing
	network transport
	* State notification via futures
	* Support for transfer windows
	* Dropped NOOP frame (nothing seems to use it, as a
	consequence we're only supporting spdy/3+ now - if
	older versions are required please raise an RT)

	Documentation:
	* Examples for client, server and debug usage
	* Next-protocol-negotiation is more widely available, so
	documented ways of using that

0.001     2012-03-03 22:41:48 Europe/London
	Initial CPAN release.
