@@ -1,10 +1,19 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	Features:
+	* Window update messages now handled by Protocol::SPDY::Stream,
+	rather than leaving the implementation to send them manually.
+	* Incoming settings frames are now applied
+	* restore_initial_settings method for sending persisted values
+
 	Bug fixes:
 	* Length calculation was incorrect, this could cause undef frames.
 	* ->headers method support in Protocol::SPDY::Stream, needed for
 	proper server push support
+	* ->window_update method support in Protocol::SPDY::Stream
+	* FIN would cause remote_finished Future to fire before the data
+	event was invoked
 
 	Build:
 	* Uses cpanfile for dependency tracking
